--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,14 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: #050a0e;
+  background: var(--clr-bg1);
   gap: 15px;
 }
 
 button {
   display: inline-block;
   color: #01e3ef;
-  background: #050a0e;
+  background: var(--clr-bg1);
   text-align: center;
   font-size: 24px;
   font-weight: 500;
