--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ button {
 
 .btn-1:hover {
   border:1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -64,7 +64,7 @@ button {
 
 .btn-2:hover {
   border: 1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -79,7 +79,7 @@ button {
 
 .btn-3:hover {
   border: 1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -94,7 +94,7 @@ button {
 
 .btn-4:hover {
   border: 1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -109,7 +109,7 @@ button {
 
 .btn-5:hover {
   border: 1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -124,7 +124,7 @@ button {
 
 .btn-6:hover {
   border: 1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -139,7 +139,7 @@ button {
 
 .btn-7:hover {
   border: 1px solid #60f7ff;
-  color: #fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
@@ -156,7 +156,7 @@ button {
 
 .btn-8:hover {
   border: 1px solid #60f7ff;
-  color:#fff;
+  color: var(--clr-wht);
   background: var(--clr-cl1);
   box-shadow: 0 0 10px #01e3ef,
               0 0 40px #01e3ef,
