--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,9 @@ button {
   border:1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
-  box-shadow: 0 0 10px #01e3ef,
-              0 0 40px #01e3ef,
-              0 0 80px #01e3ef;
+  box-shadow: 0 0 10px var(--clr-cl1),
+              0 0 40px var(--clr-cl1),
+              0 0 80px var(--clr-cl1);
   transition-delay: .1s;
 }
 /* Button 2 */
@@ -66,9 +66,9 @@ button {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
-  box-shadow: 0 0 10px #01e3ef,
-              0 0 40px #01e3ef,
-              0 0 80px #01e3ef;
+  box-shadow: 0 0 10px var(--clr-cl1),
+              0 0 40px var(--clr-cl1),
+              0 0 80px var(--clr-cl1);
   transition-delay: .1s;
 }
 /* Button 3 */
@@ -81,9 +81,9 @@ button {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
-  box-shadow: 0 0 10px #01e3ef,
-              0 0 40px #01e3ef,
-              0 0 80px #01e3ef;
+  box-shadow: 0 0 10px var(--clr-cl1),
+              0 0 40px var(--clr-cl1),
+              0 0 80px var(--clr-cl1);
   transition-delay: .1s;
 }
 /* Button 4 */
