--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ button {
   border: 2px solid var(--clr-cl1);
 }
 
-.btn-1:hover {
+.btn-1:hover,
+.btn-1:focus,
+.btn-1:active {
   border:1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -62,7 +64,9 @@ button {
   border-radius: 3px;
 }
 
-.btn-2:hover {
+.btn-2:hover,
+.btn-2:focus,
+.btn-2:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -77,7 +81,9 @@ button {
   border-radius: 6px;
 }
 
-.btn-3:hover {
+.btn-3:hover,
+.btn-3:focus,
+.btn-3:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -92,7 +98,9 @@ button {
   border-radius: 12px;
 }
 
-.btn-4:hover {
+.btn-4:hover,
+.btn-4:focus,
+.btn-4:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -107,7 +115,9 @@ button {
   border-radius: 24px;
 }
 
-.btn-5:hover {
+.btn-5:hover,
+.btn-5:focus,
+.btn-5:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -122,7 +132,9 @@ button {
   border-radius: 100px;
 }
 
-.btn-6:hover {
+.btn-6:hover,
+.btn-6:focus,
+.btn-6:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -137,7 +149,9 @@ button {
   border-radius: 10px 100px / 120px;
 }
 
-.btn-7:hover {
+.btn-7:hover,
+.btn-7:focus,
+.btn-7:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
@@ -154,7 +168,9 @@ button {
   border: 2px solid var(--clr-cl1);  
 }
 
-.btn-8:hover {
+.btn-8:hover,
+.btn-8:focus,
+.btn-8:active {
   border: 1px solid var(--clr-cl2);
   color: var(--clr-wht);
   background: var(--clr-cl1);
